Updated styling, structure - Fixes contrast issues - Fixes heading hierarchy

--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -38,9 +38,6 @@ $job-tool-horiz-margin: 6px;
   padding: 0 20%;
   font-weight: $header-font-weight;
   color: $header-font-color;
-  a {
-    color: $accent-3;
-  }
   a:hover {
     color: $link-rollover;
   }
